     Same thing, but moving there since it is more of a
     "marker" that's specific to declararative, 
     not just an attribute technique.  [ticket:1915]

   - Fixed bug whereby columns on a mixin wouldn't propagate
     correctly to a single-table, or joined-table,
     inheritance scheme where the attribute name is
     different than that of the column. [ticket:1930],
     [ticket:1931].
          
- engine
   
   - Fixed a regression in 0.6.4 whereby the change that
     allowed cursor errors to be raised consistently broke
     the result.lastrowid accessor.   Test coverage has
     been added for result.lastrowid.   Note that lastrowid
     is only supported by Pysqlite and some MySQL drivers,
     so isn't super-useful in the general case.
   
   - the logging message emitted by the engine when
     a connection is first used is now "BEGIN (implicit)" 
     to emphasize that DBAPI has no explicit begin().
   
   - added "views=True" option to metadata.reflect(), 
     will add the list of available views to those
     being reflected.  [ticket:1936]

   - engine_from_config() now accepts 'debug' for 
     'echo', 'echo_pool', 'force' for 'convert_unicode',
     boolean values for 'use_native_unicode'.  
     [ticket:1899]

- postgresql
   - Added "as_tuple" flag to ARRAY type, returns results
     as tuples instead of lists to allow hashing.

   - Fixed bug which prevented "domain" built from a 
     custom type such as "enum" from being reflected.
     [ticket:1933]

- mysql
   - Fixed bug involving reflection of CURRENT_TIMESTAMP 
     default used with ON UPDATE clause, thanks to 
     Taavi Burns [ticket:1940]
     
- mssql
   - Fixed reflection bug which did not properly handle
     reflection of unknown types.  [ticket:1946]
    
   - Fixed bug where aliasing of tables with "schema" would
     fail to compile properly.  [ticket:1943]
     
- informix
   - *Major* cleanup / modernization of the Informix 